reference-llvm/tests/should-fail/fail22.mu
// unknown escape sequence

function @entry foo() {
    [write "hello, \world", .console];
}
